# Pantelimon_player

./: CMakeLists.txt  README.md  player.cpp  player.h  player.ui
